rename curation-module to curation-dashboard